On branch submit  Changes to be committed: 	deleted:    apache2/random-names.conf 	renamed:    bin/get_public_host -> setup/bin/get_public_host 	renamed:    bin/get_public_ip -> setup/bin/get_public_ip 	new file:   setup/bin/global_settings 	new file:   setup/bin/install_packages.sh 	renamed:    utilities/installed_packages.py -> setup/bin/python_packages.py 	new file:   setup/bin/test_config.sh 	new file:   setup/bin/utility_functions.sh 	renamed:    apache2/udacity-project.conf -> setup/saved_config/apache2/000-udacity-project.conf 	new file:   setup/saved_config/apache2/include_app.conf 	new file:   setup/saved_config/apache2/random-names.conf 	renamed:    apache2/tickets-r-us.conf -> setup/saved_config/apache2/tickets-r-us.conf 	new file:   setup/saved_config/apache2/udacity-project.conf 	new file:   setup/saved_config/global_settings 	renamed:    utilities/installed_apps.txt -> setup/saved_config/installed_apps.txt 	renamed:    network/hostname -> setup/saved_config/network/hostname 	new file:   setup/saved_config/network/network 	renamed:    network/setup_ufw1.sh -> setup/saved_config/network/setup_ufw1.sh 	renamed:    network/ssh_authorized_keys -> setup/saved_config/network/ssh_authorized_keys 	renamed:    network/sshd_config -> setup/saved_config/network/sshd_config 	new file:   setup/saved_config/network/udacity_key 	renamed:    network/ufw_status -> setup/saved_config/network/ufw_status 	new file:   setup/saved_config/postgresql/pg_hba.conf 	new file:   setup/saved_config/postgresql/pg_ident.conf 	renamed:    users/carruth -> setup/saved_config/users/carruth 	renamed:    users/grader -> setup/saved_config/users/grader 	renamed:    users/passwd -> setup/saved_config/users/passwd 	renamed:    users/sudoers -> setup/saved_config/users/sudoers 	deleted:    utilities/setup.sh 	deleted:    utilities/test_config.sh

--- a/setup/saved_config/apache2/tickets-r-us.conf
+++ b/setup/saved_config/apache2/tickets-r-us.conf
@@ -1,6 +1,5 @@
 
-    # Tickets'R'Us app
-    WSGIDaemonProcess tickets user=catalog group=catalog threads=1
+    WSGIDaemonProcess tickets user=carruth group=carruth threads=1
     WSGIScriptAlias /tickets /var/www/html/tickets/tickets.wsgi
     Alias /tickets/static /var/www/html/tickets/static
 
